# backlogr

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml
crates/backlogr-cli/: Cargo.toml
crates/backlogr-cli/src/: main.rs
crates/backlogr-taiga/: Cargo.toml
crates/backlogr-taiga/src/: lib.rs
src/: cli.rs  lib.rs  main.rs
src/integrations/: mod.rs  taiga.rs
