[workspace]
members = ["crates/*",]
resolver = "2"

[workspace.package]
version = "0.0.1"
license = "MIT"
rust-version = "1.86"

# description = "CLI for interacting with the Taiga REST API"
# authors = ["Acosta Quintana Lautaro", "<acostaquintanalautaro@gmail.com>"]
# readme = "README.md"
# repository = "https://github.com/lauacosta/backlogr"
# homepage = "https://github.com/lauacosta/backlogr"
# documentation = "https://github.com/lauacosta/backlogr#readme"
# keywords = ["ci", "kanban", "taiga"]
# categories = ["command-line-utilities"]

[workspace.dependencies]
color-eyre = "0.6.4"
eyre = "0.6.12"
facet = "0.27.12"
facet-json = "0.24.13"
minreq = { version = "2.13.4", features = ["https-rustls","json-using-serde", "urlencoding" ]}
